# Shelly-Plug-S-Monitor

./: .gitignore  Cargo.toml  build.sh  config.json  deployToZip.sh  readme.md
.cargo/: config.toml
Buildtools/: deploy_local.bat  deploy_local.sh  deploy_to_zip.sh
frontend/: package-lock.json  package.json
frontend/public/language/: en.json
frontend/src/: App.js  translator.js
frontend/src/Components/: EPower.jsx  Shelly.jsx
frontend_react/: package.json
frontend_react/src/: index.js
frontend_react/src/Components/: Shelly.jsx
frontend_vue/: index.html  package-lock.json  package.json  vite.config.ts
frontend_vue/shelly-plug-s/src/: App.vue
frontend_vue/shelly-plug-s/src/components/: Shelly.vue
frontend_vue/src/: App.vue  main.ts
frontend_vue/src/assets/: main.css
frontend_vue/src/components/: Archive.vue  Shelly.vue
frontendvue/shelly-plug-s/: README.md  package.json
frontendvue/shelly-plug-s/src/: main.ts
frontendvue/shelly-plug-s/src/assets/: base.css  main.css
frontendvue/shelly-plug-s/src/components/: Shelly.vue
src/: aggreated_archive_data.rs  archive.rs  archive_service.rs  cancellation_token.rs  lib.rs  main.rs  options.rs  routes.rs  shelly_api.rs  shelly_plug_s_meter.rs
