[package]
name = "shelly_web"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.18.5"
minreq = "2.6.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.89"
nameof = "1.2.2"